primitives/api/test/tests/ui/missing_block_generic_parameter.stderr
error: Missing `Block` generic parameter.
  --> tests/ui/missing_block_generic_parameter.rs:12:13
   |
12 |     impl self::Api for Runtime {
   |                ^^^
